# videoreader

./: README.md  pyproject.toml  setup.py
.github/workflows/: unittest.yml
svidreader/: ImageReader.py  analyze_image.py  cameraprojection.py  decord_video_wrapper.py  effects.py  filtergraph.py  frame_iterator.py  imagecache.py  light_detector.py  majorityvote.py  reader.py  run_pipeline.py  svidreader.py  test_filtergraph.py  test_filters.py  test_zip_image_archives.py  video_supplier.py  videoscraper.py  viewer.py
test/: projection_config.yml  test_permutation.csv
