[tool.poetry]
name = "bbo-svidreader"
version = "0.7.0"
description = "Video reader on top of imageio that allows to build custom filter-pipelines"
authors = ["BBO-lab @ caesar"]
readme = "README.md"
url = "https://github.com/bbo-lab/videoreader"
[tool.poetry.dependencies]
python = "^3.6"



[tool.pdm.build]
includes = []
[build-system]
requires = ["imageio", "bbo_ccvtools", "av", "numpy", "scipy", "pyyaml", "pandas", "bbo-calibcamlib"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
authors = [
    {name = "Paul Stahr", email = "paul.stahr@mpinb.mpg.de"},
]
requires-python = "<4.0,>=3.6"
dependencies = [
    "setuptools>=70.0.0",
]
name = "videoreader"
version = "0.7.0"
license = {file = "LICENSE"}
description = ""
readme = "README.md"
